--- a/style.css
+++ b/style.css
@@ -64,4 +64,4 @@
         top: 0px;
     }
 }
-
+/* si completo los comandos para que se dezlice un menu, funciona pero desaparecen las letras del nav con pantalla grande. Es decir, solo queda el menu desplegable en vista pequeña */
