--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.nav{
+    display: flex;
+    align-items: center;
+    background-color: rgb(193, 255, 255);
+}
 
 
 
