--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@
     box-sizing: border-box;
 }
 body{
-    max-width: 1024px;
+    max-width: 1400px;
     height: 90%;
+    
 }
 
-@media (max-width:1024px) {
 .nav{
     display: flex;
     align-items: center;
     background-color: rgb(193, 255, 255);
-    width: 100;
+    width: 100%;
     
 }
 .nav-btn{
@@ -30,6 +30,7 @@ body{
     font-size: 20px;
     font-family: 'Karla', sans-serif;
     text-decoration: none;
+    
 
 }
 .nav-links >a{
@@ -57,21 +58,19 @@ body{
 }
 .botones-animales{
     display: flex;
-    grid-gap: 7vh;
+    grid-gap: 20vh;
 }
 body {
     margin-left: 250px;
     margin-top: 125px;
-   }
-
-
-
-
-    
 }
 .botones-animales{
     border-bottom: 2px solid rgb(70, 213, 248);
     border-top: 2px solid rgb(70, 213, 248);
-    padding-left: 10px;
+    padding-left: 60px;
     margin: 30px 0px; 
+    }
+
+    .text-perro, .text-gato, .text-peces, .text-conejos{
+        text-align: center;
     }
