--- a/style.css
+++ b/style.css
@@ -52,9 +52,10 @@ body{
     top: 4rem;
 }
 .banner-botones>h2{
-    font-size: 18px;
+    font-size: 20px;
     color: black;
     display: inline-block;
+    padding-left: 45vh;
 }
 .botones-animales{
     display: flex;
@@ -74,3 +75,5 @@ body {
     .text-perro, .text-gato, .text-peces, .text-conejos{
         text-align: center;
     }
+
+.
