--- a/style.css
+++ b/style.css
@@ -21,29 +21,63 @@ body{
     font-family: 'Karla', sans-serif; color: black;
     font-size: 20px;
     font-weight: bold;
-    background-color: rgb(109, 247, 247);
+    
 }
 /* iniciar sesion y carrito */
 /* medio de pago completo */
-.medioPago{
-    height: 120px;
+
+
+.cajapago{
+    border-bottom: 2px solid #00f;
+margin-bottom: 3rem;
 }
 .medioPago{
-    background-image: url(./img/metodos-de-pago-1-1024x294.png);
-    background-size: contain;
-    background-repeat: repeat;
     display: flex;
-    justify-content: center;
-    
+    width: 80px;
+    height: 80px;
+ margin-bottom: 3rem;
+ margin-top: 2rem;
 }
-.medioPago>h1{
-    line-height: 100px;
-    text-decoration: underline;
+/* el fondo */
+.elFondo{
+    background-image: url(./img/burbujas\ backgrpun.webp);
 }
-.medioPago>h1{
-    margin-top: 100;
-    margin-bottom: 100;
-    font-size: 3rem;
-    background-color: white;
+.tituloPeluqueria{
+    font-family: 'Sora', sans-serif;
+    display: flex;
+    background-color:rgb(184, 253, 253);
 }
-/* carousel */
+.tituloPeluqueria>a{
+   font-size: 30px;
+   margin-left: 3rem;
+}
+.tituloPeluqueria>h1{
+    margin-left: 18rem;
+}
+
+/* peluqueria imagenes */
+.peluqueriaPrincipal{
+    margin-left: 18%;    
+}
+.peluqueriaPrincipal>img{
+object-fit: cover;
+}
+
+.peluqueriaPrincipal img{
+    overflow: hidden;
+    border-radius: 6px;
+    box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
+    margin: 4px 4px 4px 4px;
+    }
+.peluqueriaPrincipal img:hover{
+    transition: scale (1.5);
+}
+
+
+
+
+
+
+
+
+carousel */
