--- a/style.css
+++ b/style.css
@@ -54,24 +54,32 @@ margin-bottom: 3rem;
 .tituloPeluqueria>h1{
     margin-left: 18rem;
 }
-
+/* container imagenes */
+.container-imagenes{
+    margin: 4px 4px 4px 4px;
+}
 /* peluqueria imagenes */
 .peluqueriaPrincipal{
     margin-left: 18%;    
 }
-.peluqueriaPrincipal>img{
-object-fit: cover;
+.peluqueriaPrincipal{
+display: grid;
+grid-template-columns: repeat(3, 1fr);
 }
 
 .peluqueriaPrincipal img{
     overflow: hidden;
     border-radius: 6px;
     box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
-    margin: 4px 4px 4px 4px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    transition: all 300ms;
+    position: relative;
     }
-.peluqueriaPrincipal img:hover{
-    transition: scale (1.5);
-}
+    .peluqueriaPrincipal img:hover{
+        transform: scale(1.3);
+    }
 
 
 
