--- a/style.css
+++ b/style.css
@@ -33,10 +33,16 @@ margin-bottom: 3rem;
 }
 .medioPago{
     display: flex;
-    width: 80px;
-    height: 80px;
- margin-bottom: 3rem;
+    width: 50px;
+    height: 50px;
+ margin-bottom: 1rem;
  margin-top: 2rem;
+ margin-left: 12%;
+ grid-template-columns: repeat(8 1fr);
+}
+.medioPago img{
+    margin-left: 10px;
+    margin-right: 10px;
 }
 /* el fondo */
 .elFondo{
